joy-alemazung-cms/strapidb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: strapidb
  name: strapidb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: strapidb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: strapidb
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: alemazung-strapi-app-secret
          image: postgres:16.0-alpine
          name: strapidb
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: strapi-data
      restartPolicy: Always
      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-data
