joy-alemazung-cms/strapi-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-postgres-service
  namespace: joy-alemazung
  labels:
    io.kompose.service: strapi-postgres-service
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    io.kompose.service: strapidb
