joy-alemazung-cms/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: strapi-app-service
spec:
  ports:
    - name: "1337"
      port: 1337
      targetPort: 1337
  selector:
